--- a/lib/hyacinth_web/live/home_live/index.html.heex
+++ b/lib/hyacinth_web/live/home_live/index.html.heex
@@ -5,8 +5,8 @@
     </div>
 
     <div class="mt-2 grid grid-cols-3 gap-4">
-      <%= for {sess, elements_labeled} <- @user_sessions do %>
-        <Cards.label_session_card sess={sess} elements_labeled={elements_labeled} total_elements={100} use_job_for_header={true} socket={@socket} />
+      <%= for prog <- @user_sessions do %>
+        <Cards.label_session_progress_card progress={prog} use_job_for_header={true} socket={@socket} />
       <% end %>
     </div>
   </div>
