--- a/lib/hyacinth_web/live/label_job_live/new.html.heex
+++ b/lib/hyacinth_web/live/label_job_live/new.html.heex
@@ -8,19 +8,19 @@
         <%= @dataset.name %>
       </:crumb>
       <:crumb label={nil} to={Routes.live_path(@socket, HyacinthWeb.LabelJobLive.New, dataset: @dataset)}>
-        New Job
+        New Labeling Job
       </:crumb>
     </.breadcrumbs>
     <div class="mb-2" />
   <% end %>
 
-  <h1>New Job</h1>
+  <h1>New Labeling Job</h1>
 </header>
 
 <main class="mt-2">
   <div>
     <.form let={f} for={@changeset} phx-change="form_change" phx-submit="form_submit">
-      <div class="flex">
+      <div class="flex items-start">
         <div class="card w-2/3">
           <div class="form-content form-wide">
             <p>
@@ -28,8 +28,6 @@
               <%= select f, :dataset_id, Enum.map(@datasets, fn d -> {d.name, d.id} end), prompt: "Choose a value" %>
               <%= error_tag f, :dataset_id %>
             </p>
-
-            <br />
 
             <p>
               <%= label f, :name %>
@@ -39,7 +37,7 @@
 
             <p>
               <%= label f, :description %>
-              <%= text_input f, :description, placeholder: "A very cool labeling job." %>
+              <%= textarea f, :description, placeholder: "A very cool labeling job." %>
               <%= error_tag f, :description %>
             </p>
 
@@ -52,9 +50,9 @@
             </p>
 
             <p>
-              <%= label f, :label_options_string %>
+              <%= label f, :label_options_string, "Label options" %>
               <%= text_input f, :label_options_string, placeholder: "Very, Somewhat, Only a little" %>
-              <%= error_tag f, :label_options_string %>
+              <%= error_tag f, :label_options_string, name: "Label options" %>
             </p>
 
             <br />
@@ -65,14 +63,14 @@
               <%= error_tag f, :type %>
             </p>
 
-            <div>
-              <%= submit "Create Job" %>
-            </div>
           </div>
 
           <div class="mt-6">
             <div class="flex items-center space-x-1">
-              <div class="text-gray-300">Options for <%= LabelJobType.name(Ecto.Changeset.get_field(@changeset, :type)) %></div>
+              <div class="ml-1 text-gray-400">
+                <span>Options for type</span>
+                <span class="text-gray-300"><%= LabelJobType.name(Ecto.Changeset.get_field(@changeset, :type)) %></span>
+              </div>
               <button
                 type="button"
                 class="p-0.5 text-blue-400 hover:text-blue-500 rounded focus:outline-none focus:ring-2 ring-blue-400 focus:hover:ring-blue-500 transition"
@@ -82,17 +80,34 @@
               </button>
             </div>
 
-            <table class="mt-1 text-sm">
-              <tbody>
-                <%= for {k, v} <- Ecto.Changeset.get_field(@changeset, :options) do %>
-                  <tr>
-                    <td class="pr-1 text-gray-400"><%= humanize(k) %></td>
-                    <td><%= v %></td>
-                  </tr>
-                <% end %>
-              </tbody>
-            </table>
+            <div class="mt-1 px-4 py-2 bg-gray-900 rounded">
+              <table>
+                <tbody class="text-gray-200">
+                  <%= for {k, v} <- Ecto.Changeset.get_field(@changeset, :options) do %>
+                    <tr>
+                      <td class="pr-4 text-gray-500"><%= humanize(k) %></td>
+                      <td><%= v %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
 
+          </div>
+        </div>
+
+        <div class="ml-6 w-1/3">
+          <%= if @selected_dataset_stats do %>
+            <Cards.dataset_card dataset_stats={@selected_dataset_stats} socket={@socket} />
+          <% else %>
+            <div class="card text-sm text-gray-400">No dataset selected. Dataset preview will appear here.</div>
+          <% end %>
+
+          <div class="mt-3 flex justify-start">
+            <%= submit class: "btn btn-jumbo btn-icon btn-blue" do %>
+              <span class="opacity-80"><Icons.check_circle_solid /></span>
+              <span>Save Job</span>
+            <% end %>
           </div>
         </div>
       </div>
@@ -104,9 +119,9 @@
   <%= case @modal do %>
   <% {:job_type_options, options_changeset} -> %>
     <.modal size="sm">
-      <:header>Options for <%= LabelJobType.name(Ecto.Changeset.get_field(@changeset, :type)) %></:header>
+      <:header>Options for type <%= LabelJobType.name(Ecto.Changeset.get_field(@changeset, :type)) %></:header>
 
-      <div>
+      <div class="mt-2">
         <.form let={f} for={options_changeset} as="options" phx-change="options_form_change" phx-submit="options_form_submit">
           <LabelJobType.render_form job_type={Ecto.Changeset.get_field(@changeset, :type)} form={f} />
           <%= submit "Save", class: "mt-6 btn btn-blue" %>
