--- a/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
+++ b/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
@@ -1,1 +1,13 @@
-<div>Advanced PNG viewer</div>
+<div>
+  <canvas
+    class="w-full aspect-square object-contain bg-black rounded"
+    style="height: calc(100vh - 16rem);"
+    phx-hook="AdvancedPNGCanvas"
+    id="advanced-png-viewer-canvas"
+    data-object-id={@object.id}
+  ></canvas>
+
+  <div class="mt-4 flex justify-center">
+    <input type="range" min="1" max="255" value="255" class="w-1/2" id="advanced-png-viewer-max-slider" />
+  </div>
+</div>
