Add min controls to advanced png viewer

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -156,7 +156,7 @@ h3 {
 
 /* Forms */
 
-.form-content {
+.form-content:not(.form-content-style-only) {
     @apply flex flex-col items-start space-y-4;
 }
 
