--- a/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
+++ b/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
@@ -1,13 +1,19 @@
-<div>
+<div class="flex flex-col" style="height: calc(100vh - 16rem);">
   <canvas
-    class="w-full aspect-square object-contain bg-black rounded"
-    style="height: calc(100vh - 16rem);"
+    class="flex-1 aspect-square object-contain bg-black rounded"
     phx-hook="AdvancedPNGCanvas"
     id="advanced-png-viewer-canvas"
     data-object-id={@object.id}
   ></canvas>
 
-  <div class="mt-4 flex justify-center">
-    <input type="range" min="1" max="1000" value="1000" class="w-1/2" id="advanced-png-viewer-max-slider" />
+  <div class="form-content form-content-style-only mt-4 space-y-2">
+    <div class="pl-4 p-2 w-full bg-gray-800 rounded flex items-center space-x-4">
+      <input class="flex-1" type="range" min="0" max="100" value="0" id="advanced-png-viewer-min-slider" />
+      <input type="number" min="0" max="100" value="0" id="advanced-png-viewer-min-input" />
+    </div>
+    <div class="pl-4 p-2 w-full bg-gray-800 rounded flex items-center space-x-4">
+      <input class="flex-1" type="range" min="0" max="100" value="100" id="advanced-png-viewer-max-slider" />
+      <input type="number" min="0" max="100" value="100" id="advanced-png-viewer-max-input" />
+    </div>
   </div>
 </div>
