--- a/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
+++ b/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
@@ -1,23 +1,27 @@
-<div class="flex flex-col" style="height: calc(100vh - 16rem);">
+<div class="flex flex-col">
   <canvas
-    class="flex-1 aspect-square object-contain bg-black rounded"
+    width="100"
+    height="100"
+    class="aspect-square object-contain bg-black rounded"
+    style="height: calc(100vh - 16rem);"
     phx-hook="AdvancedPNGCanvas"
-    id="advanced-png-viewer-canvas"
+    id={"advanced-png-viewer-canvas-#{@unique_id}"}
     data-object-id={@object.id}
+    data-unique-id={@unique_id}
   ></canvas>
 
-  <div phx-update="ignore" id="advanced-png-viewer-controls">
-    <div class="form-content form-content-style-only mt-4 space-y-2">
-      <div class="pl-4 p-2 w-full bg-gray-800 rounded flex items-center space-x-4">
-        <input class="flex-1" type="range" min="0" max="100" value="0" id="advanced-png-viewer-min-slider" />
-        <input type="number" min="0" max="100" value="0" id="advanced-png-viewer-min-input" />
+  <div phx-update="ignore" id={"advanced-png-viewer-controls-#{@unique_id}"}>
+    <div class="form-content form-content-style-only mt-4 pl-3 p-2 bg-gray-800 rounded border border-gray-700 space-y-2">
+      <div class="flex items-center space-x-4">
+        <input class="flex-1" type="range" min="0" max="100" value="0" id={"advanced-png-viewer-min-slider-#{@unique_id}"} />
+        <input class="w-24 text-sm text-gray-400" type="number" min="0" max="100" value="0" id={"advanced-png-viewer-min-input-#{@unique_id}"} />
       </div>
-      <div class="pl-4 p-2 w-full bg-gray-800 rounded flex items-center space-x-4">
-        <input class="flex-1" type="range" min="0" max="100" value="100" id="advanced-png-viewer-max-slider" />
-        <input type="number" min="0" max="100" value="100" id="advanced-png-viewer-max-input" />
+      <div class="flex items-center space-x-4">
+        <input class="flex-1" type="range" min="0" max="100" value="100" id={"advanced-png-viewer-max-slider-#{@unique_id}"} />
+        <input class="w-24 text-sm text-gray-400" type="number" min="0" max="100" value="100" id={"advanced-png-viewer-max-input-#{@unique_id}"} />
       </div>
     </div>
 
-    <div class="hidden fixed pointer-events-none border-2 border-green-400 box-border" id="advanced-png-viewer-drag-box" />
+    <div class="hidden fixed pointer-events-none border-2 border-green-400 box-border" id={"advanced-png-viewer-drag-box-#{@unique_id}"} />
   </div>
 </div>
