--- a/lib/hyacinth_web/live/label_session_live/label.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/label.html.heex
@@ -24,20 +24,20 @@
   <div class="w-1/3 flex justify-end items-center space-x-6">
     <div class="space-x-1">
       <button class="btn btn-gray btn-icon-only" phx-click="open_modal_label_history">
-        <Icons.bookmark_mini />
+        <Icons.book_open_mini />
       </button>
       <button class="btn btn-gray btn-icon-only" phx-click="open_modal_notes">
-        <Icons.plus_circle_mini />
+        <Icons.pencil_mini />
       </button>
       <button class="btn btn-gray btn-icon-only">
-        <Icons.user_mini />
+        <Icons.information_circle_mini />
       </button>
     </div>
 
     <div class="bg-gray-700 border border-gray-500 divide-x divide-gray-500 rounded flex">
       <div class="px-4 text-gray-300 font-mono flex items-center">0:00</div>
       <button class="p-2 text-gray-300 hover:bg-gray-800 rounded-r transition focus:ring-4 focus:ring-gray-500 focus:outline-none">
-        <Icons.briefcase_mini />
+        <Icons.refresh_mini />
       </button>
     </div>
   </div>
@@ -54,13 +54,13 @@
 
           <div class="mt-2">
             <%= case Ecto.Changeset.get_field(@viewer_select_changeset, :viewer) do %>
-            <% :web_image -> %>
+            <% :basic -> %>
               <img
                 class="w-full aspect-square object-contain bg-black rounded"
                 src={Routes.image_path(@socket, :show, object.id)}
                 style="height: calc(100vh - 16rem);"
               />
-            <% :advanced_png -> %>
+            <% :advanced -> %>
               <%= live_render(@socket, HyacinthWeb.ViewerLive.Viewers.AdvancedPNG, session: %{"object_id" => object.id, "unique_id" => i}, id: "viewer-advanced-png-#{object.id}")  %>
             <% end %>
           </div>
@@ -80,7 +80,14 @@
         </.form>
       </div>
 
-      <div class="mt-8">
+      <div class="mt-4">
+        <div class="text-sm text-gray-400">Instructions</div>
+        <div class="mt-1 pl-2 border-l-4 border-gray-700">
+          <div class="text-sm text-gray-300"><%= @label_session.job.prompt %></div>
+        </div>
+      </div>
+
+      <div class="mt-4">
         <div class="text-sm text-gray-400 font-medium">Label Options</div>
         <div class="mt-1 space-y-2 flex flex-col">
           <%= for label_val <- @label_session.job.label_options do %>
@@ -105,22 +112,26 @@
       <:header>Label History</:header>
 
       <div class="h-96 overflow-y-auto" style="height: 50vh;">
-        <div class="mt-3 border border-gray-700 rounded">
-          <table class="mt-1 w-full table text-sm text-gray-400">
-            <thead>
-              <th>Label</th>
-              <th>Timestamp</th>
-            </thead>
-            <tbody>
-              <%= for {label, i} <- Enum.with_index(@labels) do %>
-                <tr class={i == 0 && "text-blue-500 font-bold"}>
-                  <td><%= label.label_value %></td>
-                  <td><%= Calendar.strftime(label.inserted_at, "%c") %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
+        <%= if length(@labels) == 0 do %>
+          <div class="mt-12 text-gray-400 text-center">No label history yet.</div>
+        <% else %>
+          <div class="mt-3 border border-gray-700 rounded">
+            <table class="mt-1 w-full table text-sm text-gray-400">
+              <thead>
+                <th>Label</th>
+                <th>Timestamp</th>
+              </thead>
+              <tbody>
+                <%= for {label, i} <- Enum.with_index(@labels) do %>
+                  <tr class={i == 0 && "text-blue-500 font-bold"}>
+                    <td><%= label.value.option %></td>
+                    <td><%= Calendar.strftime(label.inserted_at, "%c") %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        <% end %>
       </div>
     </.modal>
 
